--- a/01-change-bg-color/style.css
+++ b/01-change-bg-color/style.css
@@ -23,6 +23,16 @@ body {
 	align-items: center;
 }
 
+input[type='text'],
+input[type='text']:disabled {
+	background-color: #fff;
+	color: #999;
+	border: #000;
+	padding: 0.5rem 1rem;
+	border-radius: 0.25rem;
+	margin-top: 1rem;
+}
+
 button {
 	padding: 1rem 3rem;
 	margin: 1rem 0;
