--- a/01-change-bg-color/style.css
+++ b/01-change-bg-color/style.css
@@ -24,16 +24,18 @@ body {
 }
 
 input[type='text'],
-input[type='text']:disabled {
+input[type='text']:disabled,
+.btn-copy {
 	background-color: #fff;
-	color: #999;
+	color: #000;
 	border: #000;
 	padding: 0.5rem 1rem;
 	border-radius: 0.25rem;
 	margin-top: 1rem;
+	cursor: pointer;
 }
 
-button {
+.btn-change {
 	padding: 1rem 3rem;
 	margin: 1rem 0;
 	outline: none;
@@ -47,7 +49,7 @@ button {
 	letter-spacing: 1px;
 }
 
-button:hover {
+.btn-change:hover {
 	background-color: #fff;
 	color: #000;
 	border: 1px solid #000;
