--- a/20-color-picker/style.css
+++ b/20-color-picker/style.css
@@ -11,7 +11,7 @@ body {
 		'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 	font-size: 16px;
 	background-color: #dddeee;
-	width: 100vw;
+	max-width: 100vw;
 	height: 100vh;
 }
 
@@ -24,7 +24,7 @@ body {
 	box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.1);
 }
 
-/* Section */
+/* section */
 .section {
 	margin-bottom: 2rem;
 }
@@ -50,7 +50,7 @@ body {
 .section-title {
 	font-size: 18px;
 	font-weight: 600;
-	color: #333;
+	color: #333333;
 }
 
 .divider {
@@ -60,7 +60,7 @@ body {
 	background-color: #dddeee;
 }
 
-/* Color display */
+/* color display */
 .color-display {
 	width: 100%;
 	height: 8rem;
@@ -70,7 +70,7 @@ body {
 	background-color: #dddeee;
 }
 
-/* Select Copy mode section */
+/* select copy mode section */
 .select-copy-mode {
 	display: flex;
 	align-items: center;
@@ -92,7 +92,7 @@ body {
 	margin-top: 1rem;
 }
 
-/* Color sliders */
+/* color sliders */
 .color-sliders {
 	margin-top: 2rem;
 }
@@ -103,10 +103,10 @@ body {
 
 .hex-icon {
 	position: absolute;
-	top: 40%;
+	top: 47%;
 	left: 1px;
 	background-color: #dddeee;
-	padding: 0.5rem 1rem;
+	padding: 0.18rem 1rem;
 	border-top-left-radius: 0.15rem;
 	border-bottom-left-radius: 0.15rem;
 }
@@ -115,7 +115,7 @@ body {
 	padding-left: 3rem !important;
 }
 
-/* Color sliders */
+/* color sliders */
 .color-sliders-group {
 	margin-top: 0.5rem;
 	display: grid;
@@ -128,6 +128,7 @@ body {
 	height: 25px;
 	border-radius: 0.25rem;
 	opacity: 0.7;
+	-webkit-transition: 0.2s;
 	transition: opacity 0.2s;
 }
 
@@ -137,26 +138,11 @@ body {
 	align-items: center;
 	gap: 1rem;
 	font-size: 0.8rem;
-	color: #555;
+	color: #555555;
 	margin-top: 1rem;
 }
 
-.red-text {
-	color: #ff0000;
-	font-weight: 600;
-}
-
-.green-text {
-	color: #00ff00;
-	font-weight: 600;
-}
-
-.blue-text {
-	color: #0000ff;
-	font-weight: 600;
-}
-
-/* text input */
+/* text-input */
 .text-input,
 .text-input:disabled {
 	width: 100%;
@@ -169,13 +155,13 @@ body {
 }
 
 .text-input:focus {
-	outline: none;
+	border: 1px solid #ff6733;
 }
 
 .lead {
 	font-weight: 600;
 	font-size: 0.9rem;
-	color: #333;
+	color: #333333;
 	display: block;
 	user-select: none;
 }
@@ -186,24 +172,24 @@ label {
 
 .toast-message {
 	position: fixed;
+	z-index: 999;
 	top: 2rem;
 	right: 2rem;
-	background-color: #33cf33;
+	background-color: rgb(19, 201, 110);
 	color: #fff;
-	padding: 1rem 2rem;
-	border-radius: 0.25rem;
 	border: 1px solid #fff;
+	border-radius: 0.25rem;
+	padding: 1rem 2rem;
 	cursor: pointer;
-	z-index: 999;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 
 .toast-message-slide-in {
-	animation: toast-animation-in ease-in 0.5s;
+	animation: toast-animation-in 0.5s ease-in;
 }
 
 .toast-message-slide-out {
-	animation: toast-animation-out ease-in 0.5s;
+	animation: toast-animation-out 0.5s ease-in;
 }
 
 @keyframes toast-animation-in {
@@ -211,7 +197,6 @@ label {
 		transform: translateX(200px);
 		opacity: 0;
 	}
-
 	to {
 		transform: translateX(0px);
 		opacity: 1;
@@ -223,7 +208,6 @@ label {
 		transform: translateX(0px);
 		opacity: 1;
 	}
-
 	to {
 		transform: translateX(200px);
 		opacity: 0;
