--- a/20-color-picker/style.css
+++ b/20-color-picker/style.css
@@ -213,3 +213,25 @@ label {
 		opacity: 0;
 	}
 }
+
+/* color boxes */
+.preset-colors {
+	display: flex;
+	flex-wrap: wrap;
+	gap: 1rem;
+	justify-content: flex-start;
+	padding: 1rem 0;
+}
+
+.color-box {
+	width: 75px;
+	height: 30px;
+	border-radius: 0.15rem;
+	cursor: pointer;
+	transition: all 0.2s;
+}
+
+.color-box:hover {
+	opacity: 0.9;
+	box-shadow: 0px 1px 4px 0 rgba(0, 0, 0, 0.2);
+}
